# More-is-not-always-better

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
configs/: analysis_plan.json  data_availability.json  eeg_qc.json  eeg_schema.json  eye_qc.json  eye_schema.json  figure_contracts.json  fusion_config.json  local_paths.example.json  model_families.json  paths.example.json  questionnaire_schema.json  reviewer_response_map.json
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: ANALYSIS_DECISIONS.md  DATA_AVAILABILITY_DRAFT.md  DATA_DICTIONARY.md  EEG_SCENE_SUMMARY_CONTRACT.md  FIGURE_CONTRACTS.md  INTEGRATION_ARCHITECTURE.md  PAPER_RESULTS_MAP.md  PROVENANCE.md  REVIEWER_ISSUE_MATRIX.md
matlab/: README.md  run_eeg_bandpower_from_set.m
matlab/eeg_bandpower_pipeline/: run_eeg_bandpower_pipeline.m
scripts/: 00_build_manifests.py  01_questionnaire_pipeline.py  02_eye_pipeline.py  03_eeg_pipeline.py  04_fusion_pipeline.py  05_statistical_models.py  06_diagnostics_and_sensitivity.py  07_build_paper_outputs.py  08_build_figures.py  build_manifests.py  preflight_raw_inputs.py  run_alignment_qc.py  run_all.py  run_eeg_from_raw.py  run_end_to_end.py  run_eye_aoi_batch.py  run_fusion.py  run_realdata_all.py  run_realdata_linktest.py  validate_eeg_scene_summary.py
src/more_is_not_always_better/: __init__.py  alignment.py  aoi.py  discovery.py  eye_batch.py  filters.py  fusion.py
tests/: test_eye_tracking_methods.py  test_fusion_smoke.py  test_paper_pipeline.py  test_realdata_intake.py
(+41 files in other folders)
