[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "more-is-not-always-better"
version = "0.1.0"
description = "Paper-level VR questionnaire, eye-tracking, EEG, fusion, robustness, and reviewer-response analysis pipeline."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
